--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   lint:
+    name: Run Lint
     runs-on: ubuntu-latest
 
     steps:
@@ -17,11 +18,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "24"
           cache: "npm"
+          cache-dependency-path: "backend/package-lock.json"
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install backend dependencies
+        run: |
+          cd backend
+          npm ci
 
       - name: Run lint
         run: npm run lint
