--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - "**"
-  pull_request:
 
 jobs:
-  lint:
+  test-backend:
     name: Run Lint
     runs-on: ubuntu-latest
 
@@ -18,14 +17,43 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "24"
-          cache: "npm"
-          cache-dependency-path: "backend/package-lock.json"
+          node-version: '24'
+          cache: 'npm'
+          cache-dependency-path: 'backend/package-lock.json'
 
       - name: Install backend dependencies
         run: |
           cd backend
           npm ci
 
-      - name: Run lint
-        run: npm run lint
+      - name: Generate Prisma Client
+        run: |
+          cd backend
+          npx prisma generate
+
+      - name: Run linter
+        run: |
+          cd backend
+          npm run lint
+
+  build-backend:
+    name: Build Backend Docker Image
+    runs-on: ubuntu-latest
+    needs: test-backend
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        run: |
+          cd backend
+          docker build -t concordia-backend:latest .
+
+      - name: Test Docker image
+        run: |
+          docker images concordia-backend:latest
+          echo "✅ Backend Docker image built successfully"
