feat: upload user profile picture

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
+APP_NAME="Concordia"
+
 # PostgreSQL Configuration
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
@@ -14,3 +16,8 @@ PORT=3000
 
 # CORS Configuration
 CORS_ORIGIN="http://localhost:8080"
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME="your-cloud-name"
+CLOUDINARY_API_KEY="your-api-key"
+CLOUDINARY_API_SECRET="your-api-secret"
