--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
 		"bcrypt": "^6.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
+		"cloudinary": "^2.8.0",
 		"dotenv": "^17.2.3",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
@@ -44,8 +45,9 @@
 		"@nestjs/schematics": "^11.0.0",
 		"@nestjs/testing": "^11.0.1",
 		"@types/bcrypt": "^6.0.0",
-		"@types/express": "^5.0.0",
+		"@types/express": "^5.0.5",
 		"@types/jest": "^30.0.0",
+		"@types/multer": "^2.0.0",
 		"@types/node": "^22.10.7",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.2",
