--- a/.github/workflows/frontend-deploy-dev.yml
+++ b/.github/workflows/frontend-deploy-dev.yml
@@ -19,10 +19,10 @@ jobs:
         run: npm i -g vercel@latest
 
       - name: Pull env vars
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Preview
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
