--- a/.github/workflows/frontend-deploy-dev.yml
+++ b/.github/workflows/frontend-deploy-dev.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - "frontend/**"   # Only trigger when files in /frontend change
 
 jobs:
   deploy:
