--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,6 +35,7 @@ COPY --from=builder /app/prisma ./prisma
 
 # Copy generated Prisma client
 COPY --from=builder /app/node_modules/@prisma ./node_modules/@prisma
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
 # Copy built application from builder
 COPY --from=builder /app/dist ./dist
