--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -60,13 +60,21 @@ jobs:
           cd backend
           docker build -t concordia-backend:latest .
 
+  deploy-backend:
+    name: Deploy Backend to Cloud
+    runs-on: ubuntu-latest
+    needs: build-backend
+
+    steps:
       - name: Install Render CLI
         run: |
           curl -fsSL https://raw.githubusercontent.com/render-oss/cli/refs/heads/main/bin/install.sh | sh
 
-      - name: Login to Render CLI
+      - name: Authenticate with Render
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          render login --api-key ${{ secrets.RENDER_API_KEY }}
+          render login
 
       - name: Deploy to Render Prod
         run: |
