--- a/.github/workflows/backend-deploy-dev.yml
+++ b/.github/workflows/backend-deploy-dev.yml
@@ -70,12 +70,8 @@ jobs:
         run: |
           curl -fsSL https://raw.githubusercontent.com/render-oss/cli/refs/heads/main/bin/install.sh | sh
 
-      - name: Authenticate with Render
+      - name: Deploy to Render Development
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-        run: |
-          render login
-
-      - name: Deploy to Render Dev
         run: |
           render deploy service ${{ secrets.RENDER_DEV_SERVICE_ID }}
