--- a/.github/workflows/backend-deploy-dev.yml
+++ b/.github/workflows/backend-deploy-dev.yml
@@ -68,10 +68,13 @@ jobs:
     steps:
       - name: Install Render CLI
         run: |
-          curl -fsSL https://raw.githubusercontent.com/render-oss/cli/refs/heads/main/bin/install.sh | sh
+          curl -L https://github.com/render-oss/cli/releases/download/v1.1.0/cli_1.1.0_linux_amd64.zip -o render.zip
+          unzip render.zip
+          sudo mv cli_v1.1.0 /usr/local/bin/render
 
       - name: Deploy to Render Development
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          CI: true
         run: |
-          render deploy service ${{ secrets.RENDER_DEV_SERVICE_ID }}
+          render deploys create ${{ secrets.RENDER_DEV_SERVICE_ID }} --output json --confirm
