--- a/.github/workflows/frontend-deploy-dev.yml
+++ b/.github/workflows/frontend-deploy-dev.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm i -g vercel@latest
 
       - name: Pull env vars
-        run: vercel pull --yes --environment=development --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build
         run: vercel build --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }}
