--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,6 @@ CORS_ORIGIN="http://localhost:8080"
 CLOUDINARY_CLOUD_NAME="your-cloud-name"
 CLOUDINARY_API_KEY="your-api-key"
 CLOUDINARY_API_SECRET="your-api-secret"
+
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM=your-sendgrid-from-email
