--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=concordia
 
+NODE_ENV="development"
+
 # Database URL
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/concordia"
 
