--- a/backend/package.json
+++ b/backend/package.json
@@ -81,6 +81,9 @@
 		"transform": {
 			"^.+\\.(t|j)s$": "ts-jest"
 		},
+		"transformIgnorePatterns": [
+			"node_modules/(?!uuid)"
+		],
 		"moduleNameMapper": {
 			"^src/(.*)$": "<rootDir>/$1"
 		},
