--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,7 @@ CLOUDINARY_API_SECRET="your-api-secret"
 
 SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_FROM=your-sendgrid-from-email
+
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_CALLBACK_URL="http://localhost:3000/api/v1/auth/google/callback"
