--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.0.1",
+		"@nestjs/schedule": "^5.0.1",
 		"@nestjs/swagger": "^11.2.1",
 		"@prisma/client": "^6.18.0",
 		"bcrypt": "^6.0.0",
