--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,9 @@ CLOUDINARY_API_SECRET="your-api-secret"
 
 SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_FROM=your-sendgrid-from-email
+
+# Pusher Configuration
+PUSHER_APP_ID="your-app-id"
+PUSHER_KEY="your-key"
+PUSHER_SECRET="your-secret"
+PUSHER_CLUSTER="your-cluster"
