--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -38,7 +38,12 @@ services:
     command: sh -c "npx prisma migrate deploy && npm run start:prod"
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:3000/api/v1
+        NEXT_PUBLIC_PUSHER_KEY: ${PUSHER_KEY}
+        NEXT_PUBLIC_PUSHER_CLUSTER: ${PUSHER_CLUSTER}
     container_name: concordia-frontend-e2e
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:3000/api/v1
