--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,10 @@ RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
 COPY . .
 
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_PUSHER_KEY
+ARG NEXT_PUBLIC_PUSHER_CLUSTER
+
 RUN pnpm run build
 
 EXPOSE 8080
