--- a/backend/package.json
+++ b/backend/package.json
@@ -35,13 +35,15 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cloudinary": "^2.8.0",
+		"cookie-parser": "^1.4.7",
 		"dotenv": "^17.2.3",
+		"helmet": "^8.1.0",
 		"passport": "^0.7.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.1",
+		"pusher": "^5.2.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
-		"pusher": "^5.2.0",
 		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
@@ -51,6 +53,7 @@
 		"@nestjs/schematics": "^11.0.0",
 		"@nestjs/testing": "^11.0.1",
 		"@types/bcrypt": "^6.0.0",
+		"@types/cookie-parser": "^1.4.10",
 		"@types/express": "^5.0.5",
 		"@types/jest": "^30.0.0",
 		"@types/multer": "^2.0.0",
