--- a/.github/workflows/backend-deploy-dev.yml
+++ b/.github/workflows/backend-deploy-dev.yml
@@ -39,6 +39,10 @@ jobs:
           npm run lint
 
       - name: Run tests
+        env:
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_CALLBACK_URL: ${{ secrets.GOOGLE_CALLBACK_URL }}
         run: |
           cd backend
           npm test
@@ -75,9 +79,6 @@ jobs:
       - name: Deploy to Render Development
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          GOOGLE_CALLBACK_URL: ${{ secrets.GOOGLE_CALLBACK_URL }}
           CI: true
         run: |
           render deploys create ${{ secrets.RENDER_DEV_SERVICE_ID }} --output json --confirm
