--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy to Production
         id: deploy
         run: |
-          DEPLOY_URL=$(vercel deploy --prebuilt --prod --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }} | tail -1)
+          DEPLOY_URL=$(vercel deploy --prebuilt --prod --cwd ./frontend --token=${{ secrets.VERCEL_TOKEN }} --archive=tgz | tail -1)
           echo "deploy-url=$DEPLOY_URL" >> $GITHUB_OUTPUT
 
       - name: Alias to Production Domain
