--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -48,3 +48,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: backend
+
+      - name: SonarQube Analysis Link
+        run: echo "See the analysis at https://sonarcloud.io/project/overview?id=concordia"
